crates/ars-components/src/date_time/date_range_picker/snapshots/ars_components__date_time__date_range_picker__tests__snapshot_root_disabled.snap
---
source: crates/ars-components/src/date_time/date_range_picker/tests.rs
expression: snapshot_attrs(&api.root_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-disabled",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-range-picker",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "closed",
            ),
        ),
        (
            Id,
            String(
                "trip",
            ),
        ),
    ],
    styles: [],
}
