crates/ars-components/src/date_time/date_range_picker/snapshots/ars_components__date_time__date_range_picker__tests__snapshot_start_field_props.snap
---
source: crates/ars-components/src/date_time/date_range_picker/tests.rs
expression: snapshot_attrs(&child)
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "field-group",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-field",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Start date",
            ),
        ),
        (
            Id,
            String(
                "trip-start-input-field-group",
            ),
        ),
        (
            Role,
            String(
                "group",
            ),
        ),
    ],
    styles: [],
}
